// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel > renders with arrows correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <div data-slot="carousel-arrows" class=""><button type="button" disabled="" data-slot="carousel-prev" aria-label="Prev" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full start-4 sm:-start-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-left shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" data-slot="carousel-next" aria-label="Next" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full end-4 sm:-end-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-right shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Carousel > renders with as correctly 1`] = `
"<nav role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`Carousel > renders with class correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none w-full max-w-xs">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Carousel > renders with dots correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="tabpanel" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <!--v-if-->
    <div role="tablist" aria-label="Choose slide to display" data-slot="carousel-dots" class="absolute inset-x-0 -bottom-7 flex flex-wrap items-center justify-center gap-3"></div>
  </div>
</div>"
`;

exports[`Carousel > renders with items correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Carousel > renders with next correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <div data-slot="carousel-arrows" class=""><button type="button" disabled="" data-slot="carousel-prev" aria-label="Prev" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full start-4 sm:-start-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-left shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" data-slot="carousel-next" aria-label="Next" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-primary)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full end-4 sm:-end-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-right shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Carousel > renders with nextIcon correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <div data-slot="carousel-arrows" class=""><button type="button" disabled="" data-slot="carousel-prev" aria-label="Prev" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full start-4 sm:-start-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-left shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" data-slot="carousel-next" aria-label="Next" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full end-4 sm:-end-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-right shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Carousel > renders with orientation vertical correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="vertical" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-col -mt-4" style="transform: translate3d(0px,NaNpx,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full pt-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Carousel > renders with prev correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <div data-slot="carousel-arrows" class=""><button type="button" disabled="" data-slot="carousel-prev" aria-label="Prev" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-primary)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full start-4 sm:-start-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-left shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" data-slot="carousel-next" aria-label="Next" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full end-4 sm:-end-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-right shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Carousel > renders with prevIcon correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <div data-slot="carousel-controls" class="">
    <div data-slot="carousel-arrows" class=""><button type="button" disabled="" data-slot="carousel-prev" aria-label="Prev" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full start-4 sm:-start-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-left shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" data-slot="carousel-next" aria-label="Next" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] ring ring-inset ring-accent-border text-accent-soft-foreground bg-accent-surface hover:bg-accent-soft active:bg-accent-soft disabled:bg-accent-surface aria-disabled:bg-accent-surface dark:disabled:bg-accent-surface dark:aria-disabled:bg-accent-surface outline-accent-focus focus-visible:outline-3 focus-visible:ring-accent text-sm gap-1.5 p-1.5 absolute rounded-full end-4 sm:-end-12 top-1/2 -translate-y-1/2"><span class="iconify i-lucide:arrow-right shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Carousel > renders with ui correctly 1`] = `
"<div role="region" aria-roledescription="carousel" data-orientation="horizontal" tabindex="0" data-slot="carousel" class="relative focus:outline-none">
  <div data-slot="carousel-viewport" class="overflow-hidden h-[320px]">
    <div data-slot="carousel-container" class="flex items-start flex-row -ms-4" style="transform: translate3d(NaNpx,0px,0px);">
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=1" alt="Image 1" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=2" alt="Image 2" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=3" alt="Image 3" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=4" alt="Image 4" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=5" alt="Image 5" width="300" height="300" class="rounded-lg"></div>
      <div role="group" aria-roledescription="slide" data-slot="carousel-item" class="min-w-0 shrink-0 basis-full ps-4"><img src="https://picsum.photos/600/600?random=6" alt="Image 6" width="300" height="300" class="rounded-lg"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
